packages/svelte/tests/compiler-errors/samples/runes-wrong-derived-placement/_config.js
import { test } from '../../test';

export default test({
	error: {
		code: 'state_invalid_placement',
		message:
			'`$derived(...)` can only be used as a variable declaration initializer or a class field'
	}
});
